fix: fix image and stats alignment

--- a/E1.0/src/assets/styles/cards.scss
+++ b/E1.0/src/assets/styles/cards.scss
@@ -85,7 +85,6 @@ main {
 
     img {
       width: 100%;
-      height: 100%;
       object-fit: contain;
     }
   }
@@ -109,7 +108,7 @@ main {
 
   .card__image {
     grid-column: span 3;
-    max-height: 300px;
+    max-height: 400px;
   }
 
   .card__info {
@@ -145,6 +144,7 @@ main {
   .card__stats {
     display: flex;
     margin: 10px 25px;
+    align-items: center;
 
     &__title {
       margin: 0;
